--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,10 @@
 #static/* linguist-vendored
-#*.cc linguist-language=cpp
+*.cc linguist-language=cpp
 *.c linguist-language=c
 docs/* linguist-documentation
 *docs/* linguist-documentation
 *.html linguist-documentation
-*.am linguist-make
+*.am linguist-vendored
 *.sh linguist-vendored
 Makefile linguist-vendored
 makefile linguist-vendored
