--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,12 @@
 #static/* linguist-vendored
-*.cc linguist-language=cpp
-*.c linguist-language=c
 docs/* linguist-documentation
 *docs/* linguist-documentation
 *.html linguist-documentation
-*.am linguist-vendored
-*.sh linguist-vendored
-Makefile linguist-vendored
-makefile linguist-vendored
-Makefile* linguist-vendored
-config* linguist-vendored
+*.am linguist-vendored=true
+*.sh linguist-vendored=true
+Makefile linguist-vendored=true
+makefile linguist-vendored=true
+Makefile* linguist-vendored=true
+config* linguist-vendored=true
+*.cc linguist-language=cpp
+*.c linguist-language=c
