--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,17 @@
-#static/* linguist-vendored
-docs/* linguist-documentation
-*docs/* linguist-documentation
-*.html linguist-documentation
-*.am linguist-vendored=true
-*.sh linguist-vendored=true
-Makefile linguist-vendored=true
-makefile linguist-vendored=true
-Makefile* linguist-vendored=true
-config* linguist-vendored=true
-*.cc linguist-language=cpp
+# languag usage
 *.c linguist-language=c
+*.cc linguist-language=cpp
+# documentation
+AUTHORS linguist-documentation
+COPYING linguist-documentation
+ChangeLog linguist-documentation
+Condition_Variable_FAQ linguist-documentation
+INSTALL linguist-documentation
+NEWS linguist-documentation
+README linguist-documentation
+# autotools
+aclocal.m4 linguist-vendored
+configure* linguist-vendored
+depcomp linguist-vendored
+missing linguist-vendored
+mkinstalldirs linguist-vendored
